--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,7 @@
     src: url(./src/images/PoiretOne-Regular.ttf);
   }
 
-  .container {
-      /* padding: 120px 0; */
-  }
-
+  
   /* .title{
     font-size: 55px;
     font-family: PoiretOne;
@@ -90,6 +87,8 @@ li {
 #logo{
     font-family: PoiretOne;
     font-size: 38px;
+    font-weight: bold;
+    
     
 }   
 
@@ -139,7 +138,7 @@ li {
 
 .nav-menu {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     /* align-items: center; */
     gap: 30px;
     padding-top: 16px;
@@ -198,12 +197,29 @@ li {
         /* background-color: rgb(35, 34, 40); */
         background-color: #fff;
         /* width: 100%; */
-        width: 369px;
-        text-align: center;
+        /* width: 369px; */
+        width: 330px;
+        /* text-align: center; */
         transition: 0.3s;
         display: flex;
-        justify-content: center;
+        /* justify-content: center; */
         color: #1e1f24;
+    }
+
+    @media(max-width:400px){
+        .nav-menu{
+            position: absolute;
+            left: -1000px;
+            top: 0;
+            height: 100vh;
+            gap: 0;
+            flex-direction: column;
+            background-color: #fff;
+            width: 285px;
+            transition: 0.3s;
+            display: flex;
+            color: #1e1f24;
+        } 
     }
 
     .nav-item{
@@ -384,6 +400,7 @@ li {
 
  }
 
+
  #imageContainer{
     width: 100%;
     height: 700px;
@@ -400,13 +417,18 @@ li {
  #imageContainer p{
     color: #fff;
     font-size: 24px;
-    line-height: 33px;
+    line-height: 38px;
     letter-spacing: 0.5px;
     margin: 0px 0px 23px;
     font-weight: 300;
     font-family: Roboto;
+    font-style: italic;
 
  }
+
+.rptext{
+    font-weight: bold;
+}
 
 #howWork{
     background-color: #000000;
@@ -484,6 +506,15 @@ li {
     width:69px;
     /* height:50px; */
     margin-top: -16px;
+}
+
+.underlineNews{
+    border-bottom: rgb(255, 255, 255);
+    border-bottom:solid 6px rgb(215, 90, 90);
+    width:69px;
+    /* height:50px; */
+    margin-top: -12px;
+    margin-left: 33px;
 }
 
 .secondColumn:first-child{
@@ -610,12 +641,13 @@ li {
 #image1 p, #image2 p, #image3 p, #image4 p, #image5 p, #image6 p{
     color: #fff;
     font-family: Roboto;
-    font-size: 25px;
-    line-height: 39px;
+    font-size: 22px;
+    line-height: 35px;
     /* margin: 0px 0px 23px; */
     font-weight: 300;
     padding-left: 36PX;
     padding-right: 36PX;
+    font-style: italic;
 }
 
 
@@ -623,10 +655,11 @@ li {
     height: 650px;
     width: 100%;
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(46, 43, 44, 0.881)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.936), rgba(46, 43, 44, 0.881)),
     url('./src/images/bienesRaices.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 10%;
 }
 
 
@@ -634,20 +667,25 @@ li {
     height: 650px;
     width: 100%;
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(46, 43, 44, 0.881)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.936), rgba(46, 43, 44, 0.881)),
     url('./src/images/conformaciónSociedades.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 10%;
+
 }
 
 #image3{
     height: 650px;
-    width: 100%;
+    /* width: 100%; */
+    margin-left: -13px;
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(46, 43, 44, 0.881)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.936), rgba(46, 43, 44, 0.881)),
     url('./src/images/fideicomisos.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 10%;
+
 }
 
 /* Restructuración societaria */
@@ -655,10 +693,12 @@ li {
     height: 650px;
     width: 100%;
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(46, 43, 44, 0.881)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.936), rgba(46, 43, 44, 0.881)),
     url('./src/images/restructuracionSocietaria.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 10%;
+
 }
 
 /* Gestión de crisis */
@@ -666,21 +706,26 @@ li {
     height: 650px;
     width: 100%;
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(46, 43, 44, 0.881)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.936), rgba(46, 43, 44, 0.881)),
     url('./src/images/gestionCrisis.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 10%;
+
 }
 
 /* Negociación de deudas */
 #image6{
     height: 650px;
-    width: 100%;
+    /* width: 100%; */
+    margin-left: -13px;
     background-image:
-    linear-gradient(to bottom, rgba(0, 0, 0, 0.52), rgba(46, 43, 44, 0.881)),
+    linear-gradient(to top, rgba(0, 0, 0, 0.936), rgba(46, 43, 44, 0.881)),
     url('./src/images/negociacionDeuda.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    padding: 0 10%;
+
 }
 
 
@@ -696,8 +741,8 @@ li {
 #newsColumn1{
     background-color: #1e1f24;
     /* height: 850px; */
-    padding-right: 12%;
-    padding-left: 12%;
+    padding-right: 8%;
+    padding-left: 8%;
     padding-bottom: 130px;
     padding-top: 120px;
 
@@ -706,9 +751,9 @@ li {
 #newsColumn2{
     background-color: black;
     padding-bottom: 130px;
-    padding-right: 12%;
-    padding-left: 12%;
-    padding-top: 120px;
+    padding-right: 8%;
+    padding-left: 8%;
+    /* margin-left: -450px; */
 } 
 
 
@@ -735,30 +780,30 @@ li {
 
 @media(min-width:1200px){   
     .newsContainer h3{
-        font-size: 44px;
-        line-height: 69px;
+        font-size: 38px;
+        line-height: 55px;
 
     }
 }
 
-.btnNews a{
-    color:rgb(255, 200, 54);
-    text-decoration: none;
-    background-color: none;
-    font-family: Roboto;
-    font-size: 19px;
-    font-weight: bold;
-    letter-spacing: 2px;   
-    /* padding-left: 30%; */
-    text-transform: uppercase;
-    
-}
-
-
 #newsColumn2{
-    padding-top: 52px;
+    padding-top: 269px;
 }
 
+
+.news-link::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: rgb(255, 200, 54);
+    transition: width .3s;
+}
+
+.news-link:hover::after {
+    width: 107px;
+    /* transition: width .3s; */
+}
 
 
 
