--- a/styleTEST.css
+++ b/styleTEST.css
@@ -1,32 +1,379 @@
-html{height:100%;}
-body {
-/* background:#0D343A;
-background:-webkit-gradient(linear,0% 0%,0% 100%, from(rgba(13,52,58,1) ), to(#000000)  );
-background: -moz-linear-gradient(top, rgba(13,52,58,1) 0%, rgba(0,0,0,1) 100%); */
+@font-face {
+    font-family: Roboto;
+    src: url(./src/images/Roboto-Light.ttf);
+  }
 
-background: rgb(35, 34, 40);
-/* background: linear-gradient(to bottom, #202020, #111119); */
+  @font-face {
+    font-family: PoiretOne;
+    src: url(./src/images/PoiretOne-Regular.ttf);
+  }
 
-overflow:hidden;}
-
-
-.drop {
-  background:-webkit-gradient(linear,0% 0%,0% 100%, from(rgba(108, 99, 99, 0.366) ), to(rgba(255, 255, 255, 0.577))  );
-  background: -moz-linear-gradient(top, rgba(13,52,58,1) 0%, rgb(255, 255, 255) 100%);
-	width:4px;
-	height:199px;
-	position: absolute;
-	bottom:200px;
-	-webkit-animation: fall 15s linear infinite;
-  -moz-animation: fall 15s linear infinite;
   
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-/* animate the drops*/
-@-webkit-keyframes fall {
-	to {margin-top:900px;}
-}
-@-moz-keyframes fall {
-	to {margin-top:900px;}
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+	/* position: fixed; */
+	top: 0;
+	width: 100%;
+  }
+  
+  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+  .sticky + .content {
+	padding-top: 60px;
+  }
+
+
+a:link, a:visited,  a:hover, a:active
+{
+    text-decoration: none;
 }
 
+header{
+    background-color: #1e1f24;
+}
+
+li {
+    list-style: none;
+}
+
+  #navContainer {
+	background-color: #1e1f24;
+	padding: 0 6%;
+}
+
+
+
+@media(min-width:700px){
+    #logo{
+        font-size: 45px;
+    }
+}
+
+.navbar1 a{
+    /* color: white; */
+    /* color: #fff; */
+    color: #1e1f24;
+    text-decoration: none;
+    font-size: 22px;
+    font-family: PoiretOne;
+    font-weight: bold;
+    text-align: start;
+    text-transform: uppercase;
+
+}
+
+.navItem:after{
+    display:block;
+    content: '';
+    border-bottom: solid 3px #fff;  
+    transform: scaleX(0);  
+    transition: transform 500ms ease-in-out;
+}
+
+.navItem:hover:after {
+    transform: scaleX(1);
+   }
+
+#logo{
+    font-family: PoiretOne;
+    font-size: 29px;
+    font-weight: bold;
+}   
+
+
+.logoMenu{
+    color: #1e1f24;
+    text-decoration: none;
+    font-size: 40px;
+    font-family: PoiretOne;
+    font-weight: bold;
+    /* margin-top: -150px; */
+    padding-bottom: 69px;
+}
+
+@media(min-width:1300px){
+    .logoMenu{
+        display: none;
+    }
+}
+
+
+@media(min-width:1300px){
+    .navbar1 a{
+        color: #fff;
+    }
+}
+
+
+.navbar1 {
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 24px;
+}
+
+.nav-menu {
+    display: flex;
+    /* justify-content: space-between; */
+    /* align-items: center; */
+    gap: 30px;
+    padding-top: 16px;
+}
+
+.nav-branding{
+    font-size: 2rem;
+    text-align: start;
+}
+
+.nav-link {
+    transition: 0.7s ease;
+}
+
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: aliceblue;
+}
+
+
+@media(max-width:1300px){
+    .hamburger{
+        display: block;
+    }
+
+    .hamburger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    .hamburger.active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .nav-menu{
+        position: absolute;
+        left: -1000px;
+        /* top: 70px; */
+        top: 0;
+        /* bottom: 100px; */
+        height: 100vh;
+        gap: 0;
+        flex-direction: column;
+        /* background-color: rgb(35, 34, 40); */
+        background-color: #fff;
+        /* width: 100%; */
+        /* width: 369px; */
+        width: 330px;
+        /* text-align: center; */
+        transition: 0.3s;
+        display: flex;
+        /* justify-content: center; */
+        color: #1e1f24;
+    }
+
+    @media(max-width:400px){
+        .nav-menu{
+            position: absolute;
+            left: -1000px;
+            top: 0;
+            height: 100vh;
+            gap: 0;
+            flex-direction: column;
+            background-color: #fff;
+            width: 285px;
+            transition: 0.3s;
+            display: flex;
+            color: #1e1f24;
+        } 
+    }
+
+    .nav-item{
+        margin: 16px 0;
+    }
+
+    .nav-menu.active{
+        left: 0;
+    }
+
+    .nav-link{
+        font-size: 46px;
+        letter-spacing: 7px;
+    }
+
+    .hr{
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+    
+}
+
+/* __________________________________________________________________________________________ 
+
+    HEADER
+ __________________________________________________________________________________________ */
+
+#headerContainer{
+	height: 100vh;
+	background-color: #1e1f24;
+	padding-top: 150px;
+}
+
+
+#newsContainer{
+	/* height: 300vh; */
+	background-color: #fff;
+	padding: 150px 0;
+}
+
+
+/* __________________________________________________________________________________________ 
+
+    CUERPO DE LA NOTA
+ __________________________________________________________________________________________ */
+
+.titleOfnew{
+	padding-top: 20vh;
+	font-family: Roboto;
+	font-size: 35px;
+	line-height: 43.75px;
+	font-weight: 300;
+	/* padding-left: 5%;
+	padding-right: 5%; */
+}
+
+@media(min-width:1065px){
+	.titleOfnew{
+		padding-top: 20vh;
+		font-family: Roboto;
+		font-size: 50px;
+		line-height: 62.5px;
+		font-weight: 300;
+	}
+}
+
+.subtitleOfNew{
+	font-family: Roboto;
+	padding-top: 69px;
+	font-size: 18px;
+	line-height: 29px;
+	font-weight: 300;
+}
+
+#contendNews p{
+	font-family: Roboto;
+	font-size: 18px;
+	line-height: 29px;
+	font-weight: 300;
+
+}
+
+#contactColumn h2{
+	font-size: 22px;
+	line-height: 33px;
+	font-weight: 400;
+	padding-bottom: 25px;
+}
+
+
+#contactColumn p{
+	line-height: 10px;
+
+}
+
+
+/* __________________________________________________________________________________________ 
+
+    FOOTER
+ __________________________________________________________________________________________ */
+
+ #footer {
+  
+    padding-top: 89px; 
+    padding-bottom: 5px; 
+    /* background-color: #1e1f24; */
+    background-color: #000;
+    color: #fff;
+   
+   }
+   
+   #textFooterContainer {
+     padding-top: 69px;
+   }
+   
+   #titleFooter {
+     font-family: PoiretOne;
+     font-size: 14px;
+   
+   }
+   
+   #footerContainer {
+     max-width: 300px;
+   }
+/* 
+   .footerMenu{
+       max-width: 300px;
+       padding-top: 25px;
+   } */
+
+   .footerLink{
+       font-family: PoiretOne;
+       font-size: 19px;
+       color: #fff;
+       padding: 22px;
+       text-decoration: none;
+   }
+
+   #socialIcons{
+       /* padding: 26px 0;; */
+       /* padding: 26px 0;; */
+       padding-bottom: 26px;
+   }
+
+   #socialIcons i{
+       font-size: 25px;
+       padding: 0 22px;
+       color: #fff;
+   }
+   
+   @media(max-width:698px){
+
+   }
+
+   #socialIcons a {
+       text-decoration: none;
+   }
+
+   #footer h2{
+       font-family: PoiretOne;
+       font-weight: bold;
+       font-size: 33px;
+   }
+
+   .copyright{
+    font-family: PoiretOne;
+
+   }
+
+   .copyright2{
+    font-family: PoiretOne;
+    margin-top: -22px;
+   }
+
+  
