--- a/styles.css
+++ b/styles.css
@@ -27,31 +27,54 @@
     margin: 0;
     box-sizing: border-box;
 }
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+.sticky {
+	/* position: fixed; */
+	top: 0;
+	width: 100%;
+  }
+  
+  /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+  .sticky + .content {
+	padding-top: 60px;
+  }
 
-
+  
 a:link, a:visited,  a:hover, a:active
 {
     text-decoration: none;
 }
 
 header{
-    background-color: rgb(35, 34, 40)
+    background-color: #1e1f24;
 }
 
 li {
     list-style: none;
 }
 
-
-#navContainer {
-    padding: 15px 0;
+#logoRP{
+	text-transform: capitalize;
+	font-size: 30px;
+	text-decoration: none;
 }
 
-@media(max-width:576px){
-    #navContainer{
-        padding: 0 10%;
-    }
+.navMenu a{
+	text-decoration: none;
+
 }
+
+#loglogoRP:hover{
+	color: #fff;
+}
+
+
+  #navContainer {
+	background-color: #1e1f24;
+	padding: 0 6%;
+}
+
+
 
 @media(min-width:700px){
     #logo{
@@ -64,7 +87,7 @@ li {
     /* color: #fff; */
     color: #1e1f24;
     text-decoration: none;
-    font-size: 25px;
+    font-size: 22px;
     font-family: PoiretOne;
     font-weight: bold;
     text-align: start;
@@ -82,14 +105,13 @@ li {
 
 .navItem:hover:after {
     transform: scaleX(1);
+	color: #fff;
    }
 
 #logo{
     font-family: PoiretOne;
-    font-size: 38px;
+    font-size: 29px;
     font-weight: bold;
-    
-    
 }   
 
 
@@ -103,6 +125,10 @@ li {
     padding-bottom: 69px;
 }
 
+.logoMenu:hover{
+    color: #1e1f24;
+}
+
 @media(min-width:1300px){
     .logoMenu{
         display: none;
@@ -110,22 +136,11 @@ li {
 }
 
 
-/* @media(max-width:1300px){
-    .navItem a{
-        color: #1e1f24;
-        z-index: 100;
-    }
-} */
-
-@media(min-width:1300px){
+@media(min-width:0px){
     .navbar1 a{
         color: #fff;
     }
 }
-
-/* .navbar1 a:hover{
-    color: #ea5151;
-} */
 
 
 .navbar1 {
@@ -242,12 +257,6 @@ li {
     
 }
 
-/* @media(min-width:768px){
-    .hr{
-        display: none;
-    }
-} */
-
 /* __________________________________________________________________________________________ 
 
     HEADER ANIMACION
@@ -258,7 +267,7 @@ li {
 }
 
 #headerTextContainer{
-    padding-top: 108px;
+    padding-top: 250px;
 }
 
 #headerText h2{
@@ -730,16 +739,14 @@ li {
 
 
 
-
-
-
     /* __________________________________________________________________________________________ 
 
     BLOG
  __________________________________________________________________________________________ */
 
 #newsColumn1{
-    background-color: #1e1f24;
+    /* background-color: #1e1f24; */
+    background-color: rgb(35, 34, 40);
     /* height: 850px; */
     padding-right: 8%;
     padding-left: 8%;
@@ -904,7 +911,8 @@ li {
 /*  */
 
 #contactContainer{
-    background-color: #1e1f24;
+    /* background-color: #1e1f24; */
+    background-color: rgb(35, 34, 40);
     padding-top: 270px;
     padding-bottom: 169px;
     
@@ -918,7 +926,8 @@ li {
 }
 
 #exampleInputEmail1 {
-    background-color: #1e1f24;
+    /* background-color: #1e1f24; */
+    background-color: rgb(35, 34, 40);
     border-top: none;
     border-left: none;
     border-right: none;
@@ -933,7 +942,8 @@ li {
 }
 
 #btnForm{
-    background-color: #1e1f24;
+    /* background-color: #1e1f24; */
+    background-color: rgb(35, 34, 40);
     padding: 10px 38px;
     border: solid 1px #fff;
     color: #fff;
@@ -1058,3 +1068,82 @@ li {
    }
 
   
+/* __________________________________________________________________________________________ 
+
+    PAGINA DE POST #1
+ __________________________________________________________________________________________ */
+
+ #headerContainer{
+	height: 100vh;
+	background-color: #1e1f24;
+	padding-top: 150px;
+}
+
+
+#newsContainer{
+	/* height: 300vh; */
+	background-color: #fff;
+	padding: 150px 0;
+}
+
+.underlineForNewsTitle{
+    border-bottom: rgb(255, 255, 255);
+    border-bottom:solid 6px rgb(255, 200, 54);
+    width:69px;
+    /* height:50px; */
+    /* margin-top: -8px; */
+}
+
+/* __________________________________________________________________________________________ 
+
+    CUERPO DE LA NOTA
+ __________________________________________________________________________________________ */
+
+.titleOfnew{
+	padding-top: 20vh;
+	font-family: Roboto;
+	font-size: 35px;
+	line-height: 43.75px;
+	font-weight: 300;
+	/* padding-left: 5%;
+	padding-right: 5%; */
+}
+
+@media(min-width:1065px){
+	.titleOfnew{
+		padding-top: 20vh;
+		font-family: Roboto;
+		font-size: 50px;
+		line-height: 62.5px;
+		font-weight: 300;
+	}
+}
+
+.subtitleOfNew{
+	font-family: Roboto;
+	padding-top: 69px;
+	font-size: 18px;
+	line-height: 29px;
+	font-weight: 300;
+}
+
+#contendNews p{
+	font-family: Roboto;
+	font-size: 18px;
+	line-height: 29px;
+	font-weight: 300;
+
+}
+
+#contactColumn h2{
+	font-size: 22px;
+	line-height: 33px;
+	font-weight: 400;
+	padding-bottom: 25px;
+}
+
+
+#contactColumn p{
+	line-height: 10px;
+
+}
